@@ -396,6 +396,18 @@
 <td><p>[Pa]</p></td>
 <td><p>cloud pressure</p></td>
 </tr>
+<tr class="row-even"><td><p><strong>scene_albedo</strong></p></td>
+<td><p>float</p></td>
+<td><p>{<em>time</em>}</p></td>
+<td><p>[]</p></td>
+<td><p>scene albedo</p></td>
+</tr>
+<tr class="row-odd"><td><p><strong>scene_pressure</strong></p></td>
+<td><p>float</p></td>
+<td><p>{<em>time</em>}</p></td>
+<td><p>[Pa]</p></td>
+<td><p>apparent scene pressure</p></td>
+</tr>
 <tr class="row-even"><td><p><strong>surface_albedo</strong></p></td>
 <td><p>float</p></td>
 <td><p>{<em>time</em>}</p></td>
@@ -698,6 +710,14 @@
 <tr class="row-odd"><td><p><strong>cloud_pressure</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/cloud_pressure_crb</strong></p></td>
+</tr>
+<tr class="row-even"><td><p><strong>scene_albedo</strong></p></td>
+<td><p><em>path</em></p></td>
+<td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/scene_albedo</strong></p></td>
+</tr>
+<tr class="row-odd"><td><p><strong>scene_pressure</strong></p></td>
+<td><p><em>path</em></p></td>
+<td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/apparent_scene_pressure</strong></p></td>
 </tr>
 <tr class="row-even"><td><p><strong>surface_albedo</strong></p></td>
 <td><p><em>path</em></p></td>
