@@ -182,7 +182,7 @@
 <dl class="group">
 <dt>
 <span class="target" id="group__harp__error"></span><em>group</em> <code class="sig-name descname">harp_error</code></dt>
-<dd><p>With a few exceptions almost all HARP functions return an integer that indicate whether the function was able to perform its operations successfully. The return value will be 0 on success and -1 otherwise. In case you get a -1 you can look at the global variable <a class="reference internal" href="#group__harp__error_1gab2eeb46528306c6799632d1e800c4c36"><span class="std std-ref">harp_errno</span></a> for a precise error code. Each error code and its meaning is described in this section. You will also be able to retrieve a character string with an error description via the <a class="reference internal" href="#group__harp__error_1ga5c71395e78e526d21c422a436c9253e2"><span class="std std-ref">harp_errno_to_string()</span></a> function. This function will return either the default error message for the error code, or a custom error message. A custom error message will only be returned if the error code you pass to <a class="reference internal" href="#group__harp__error_1ga5c71395e78e526d21c422a436c9253e2"><span class="std std-ref">harp_errno_to_string()</span></a> is equal to the last error that occurred and if this last error was set with a custom error message. The HARP error state can be set with the <a class="reference internal" href="#group__harp__error_1ga4c4481ea12d137e0168fa578874cd13c"><span class="std std-ref">harp_set_error()</span></a> function.</p>
+<dd><p>With a few exceptions almost all HARP functions return an integer that indicate whether the function was able to perform its operations successfully. The return value will be 0 on success and -1 otherwise. In case you get a -1 you can look at the global variable <a class="reference internal" href="#group__harp__error_1gab2eeb46528306c6799632d1e800c4c36"><span class="std std-ref">harp_errno</span></a> for a precise error code. Each error code and its meaning is described in this section. You will also be able to retrieve a character string with an error description via the <a class="reference internal" href="#group__harp__error_1ga3e1f9afd3dbc79e6eda1ad0a3e4fab4c"><span class="std std-ref">harp_errno_to_string()</span></a> function. This function will return either the default error message for the error code, or a custom error message. A custom error message will only be returned if the error code you pass to <a class="reference internal" href="#group__harp__error_1ga3e1f9afd3dbc79e6eda1ad0a3e4fab4c"><span class="std std-ref">harp_errno_to_string()</span></a> is equal to the last error that occurred and if this last error was set with a custom error message. The HARP error state can be set with the <a class="reference internal" href="#group__harp__error_1ga4c4481ea12d137e0168fa578874cd13c"><span class="std std-ref">harp_set_error()</span></a> function.</p>
 <div class="breathe-sectiondef docutils container">
 <p class="breathe-sectiondef-title rubric">Error values</p>
 <dl class="cpp macro">
@@ -413,7 +413,7 @@
 
 <dl class="cpp function">
 <dt id="_CPPv420harp_errno_to_stringi">
-<span id="_CPPv320harp_errno_to_stringi"></span><span id="_CPPv220harp_errno_to_stringi"></span><span id="harp_errno_to_string__i"></span><span class="target" id="group__harp__error_1ga5c71395e78e526d21c422a436c9253e2"></span><em class="property">const</em> char *<code class="sig-name descname">harp_errno_to_string</code><span class="sig-paren">(</span>int <em>err</em><span class="sig-paren">)</span><br /></dt>
+<span id="_CPPv320harp_errno_to_stringi"></span><span id="_CPPv220harp_errno_to_stringi"></span><span id="harp_errno_to_string__i"></span><span class="target" id="group__harp__error_1ga3e1f9afd3dbc79e6eda1ad0a3e4fab4c"></span><em class="property">const</em> char *<code class="sig-name descname">harp_errno_to_string</code><span class="sig-paren">(</span>int <em>err</em><span class="sig-paren">)</span><br /></dt>
 <dd><p>Returns a string with the description of the HARP error. If <em>err</em> equals the current HARP error status then this function will return the error message that was last set using <a class="reference internal" href="#group__harp__error_1ga4c4481ea12d137e0168fa578874cd13c"><span class="std std-ref">harp_set_error()</span></a>. If the error message argument to <a class="reference internal" href="#group__harp__error_1ga4c4481ea12d137e0168fa578874cd13c"><span class="std std-ref">harp_set_error()</span></a> was NULL or if <em>err</em> does not equal the current HARP error status then the default error message for <em>err</em> will be returned. <dl class="simple">
 <dt><strong>Return</strong></dt><dd><p>String with a description of the HARP error. </p>
 </dd>
