@@ -386,7 +386,7 @@
 
 <dl class="cpp function">
 <dt id="_CPPv413harp_basenamePKc">
-<span id="_CPPv313harp_basenamePKc"></span><span id="_CPPv213harp_basenamePKc"></span><span id="harp_basename__cCP"></span><span class="target" id="group__harp__general_1ga96d2dcbea0ae2ee275bdb7113980ae92"></span><em class="property">const</em> char *<code class="sig-name descname">harp_basename</code><span class="sig-paren">(</span><em class="property">const</em> char *<em>path</em><span class="sig-paren">)</span><br /></dt>
+<span id="_CPPv313harp_basenamePKc"></span><span id="_CPPv213harp_basenamePKc"></span><span id="harp_basename__cCP"></span><span class="target" id="group__harp__general_1gab3604231ffff1237b8ed245ae30eac53"></span><em class="property">const</em> char *<code class="sig-name descname">harp_basename</code><span class="sig-paren">(</span><em class="property">const</em> char *<em>path</em><span class="sig-paren">)</span><br /></dt>
 <dd><p>Remove everything but the last pathname component from <em>path</em>. <dl class="simple">
 <dt><strong>Return</strong></dt><dd><p>Pointer to the last pathname component of <em>path</em>, i.e. everything from the end of <em>path</em> up to the first pathname component separation character (‘’ or ‘/’ on Windows, ‘/’ otherwise). </p>
 </dd>
@@ -400,7 +400,7 @@
 
 <dl class="cpp function">
 <dt id="_CPPv423harp_get_data_type_name14harp_data_type">
-<span id="_CPPv323harp_get_data_type_name14harp_data_type"></span><span id="_CPPv223harp_get_data_type_name14harp_data_type"></span><span id="harp_get_data_type_name__harp_data_type"></span><span class="target" id="group__harp__general_1gaffceeeef4a5b49917a355539ffb18980"></span><em class="property">const</em> char *<code class="sig-name descname">harp_get_data_type_name</code><span class="sig-paren">(</span><a class="reference internal" href="#_CPPv414harp_data_type" title="harp_data_type">harp_data_type</a> <em>data_type</em><span class="sig-paren">)</span><br /></dt>
+<span id="_CPPv323harp_get_data_type_name14harp_data_type"></span><span id="_CPPv223harp_get_data_type_name14harp_data_type"></span><span id="harp_get_data_type_name__harp_data_type"></span><span class="target" id="group__harp__general_1ga9c1402a37824f5e7489c427e8e8e81f2"></span><em class="property">const</em> char *<code class="sig-name descname">harp_get_data_type_name</code><span class="sig-paren">(</span><a class="reference internal" href="#_CPPv414harp_data_type" title="harp_data_type">harp_data_type</a> <em>data_type</em><span class="sig-paren">)</span><br /></dt>
 <dd><p>Returns the name of a data type. <dl class="simple">
 <dt><strong>Return</strong></dt><dd><p>if the data type is known a string containing the name of the type, otherwise the string “unknown”. </p>
 </dd>
