@@ -7,6 +7,7 @@
   - GHG CCI: added support for TROPOMI WFMD L2
   - QA4ECV HCHO: add amf=clear_sky ingestion option
   - S5P L2 HCHO: renamed cloud_altitude variable to cloud_height
+  - S5P L2 NO2+FRESCO: added scene_albedo and scene_pressure
 
 1.13 2021-03-12
 ~~~~~~~~~~~~~~~
